added nav buttons

--- a/website/course_content.html
+++ b/website/course_content.html
@@ -1,3 +1,28 @@
+<header>
+  <!-- Logo Placeholder -->
+  <div class="logo">
+    <!-- <img src="path/to/logo.png" alt="Logo"> -->
+    <!-- Logo Placeholder -->
+  </div>
+  <nav>
+      <button onclick="history.back()">⬅️</button>
+      <button onclick="history.forward()">➡️</button>
+  </nav>
+</header>
+<style>
+  header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #ffffff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 1000;
+  }
+  body {
+    padding-top: 60px; /* Adjust to match header height */
+  }
+</style>
+
 <h1 id="keybinds-lesson">Keybinds Lesson</h1>
 <h2 id="what-are-keybinds-">What are keybinds?</h2>
 <p>Keybinds, or keyboard shortcuts, are combinations of keys that perform specific actions within software applications. They help users execute commands quickly without navigating through menus.</p>
