--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -10,16 +10,28 @@
         <link rel="stylesheet" type="text/css" href="styles/quizlib.min.css" media="screen">
         <!-- Dev: <link rel="stylesheet" type="text/css" href="../../src/quizlib.css" media="screen">-->
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css" media="screen">
-        
+
         <title>Quizlib Example</title>
     </head>
 
     <body>
+		<header>
+			<!-- Logo Placeholder -->
+			<div class="logo">
+			  <!-- <img src="path/to/logo.png" alt="Logo"> -->
+			  <!-- Logo Placeholder -->
+			</div>
+			<nav>
+				<button onclick="history.back()">⬅️</button>
+				<button onclick="history.forward()">➡️</button>
+			</nav>
+		  </header>
+
         <!-- Quiz Results -->
         <div id="quiz-result" class="card">
             You Scored <span id="quiz-percent"></span>% - <span id="quiz-score"></span>/<span id="quiz-max-score"></span><br/>
         </div>
-        
+
         <!-- Quiz Container -->
         <div id="quiz">
             <!-- Question 1 -->
