--- a/website/course_placeholder.html
+++ b/website/course_placeholder.html
@@ -115,22 +115,8 @@
     </style>
 </head>
 <body>
-
-    <header>
-        <!-- Logo Placeholder -->
-        <div class="logo">
-            <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
-            <img src="path/to/logo.png" alt="Logo">
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="course_content.html">Courses</a>
-            <a href="TOS.html">Terms of Service</a>
-            <!-- Placeholder links for future account system -->
-            <a href="#" id="login-button">Login</a>
-            <a href="#" id="register-button">Register</a>
-        </nav>
-    </header>
+    <!-- Include the header -->
+    <div id="header-placeholder"></div>
 
     <div class="container">
         <h1>Basic Internet Safety</h1>
@@ -138,21 +124,22 @@
         <a href="index.html">Return to Home</a>
     </div>
 
-    <footer>
-        <a href="TOS.html">Terms of Service</a>
-        <span>|</span>
-        <a href="privacy.html">Privacy Policy</a>
-        <!-- Future links for account management -->
-        <span>|</span>
-        <a href="#" id="login-footer">Login</a>
-        <span>|</span>
-        <a href="#" id="register-footer">Register</a>
-    </footer>
+    <!-- Include the footer -->
+    <div id="footer-placeholder"></div>
 
-    <!-- Placeholder JavaScript for future account system -->
+    <!-- Script to load header and footer -->
     <script>
-        // Future implementation for account system
-        // You can add event listeners for Login and Register buttons here
+        fetch('imports/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-placeholder').innerHTML = data;
+            });
+
+        fetch('imports/footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-placeholder').innerHTML = data;
+            });
     </script>
 </body>
 </html>
