--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -1,31 +1,23 @@
 <!-- Try this example at https://alpsquid.github.io/quizlib -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset='utf-8'>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="scripts/quizlib.1.0.1.min.js"></script>
         <!-- Dev: <script type="text/javascript" src="../../src/quizlib.js"></script>-->
         <script type="text/javascript" src="scripts/main.js"></script>
         <link rel="stylesheet" type="text/css" href="styles/quizlib.min.css" media="screen">
         <!-- Dev: <link rel="stylesheet" type="text/css" href="../../src/quizlib.css" media="screen">-->
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css" media="screen">
-
-        <title>Quizlib Example</title>
+        <title>Digital Literacy Course - Quiz</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
-		<header>
-			<!-- Logo Placeholder -->
-			<div class="logo">
-			  <!-- <img src="path/to/logo.png" alt="Logo"> -->
-			  <!-- Logo Placeholder -->
-			</div>
-			<nav>
-				<button onclick="history.back()">⬅️</button>
-				<button onclick="history.forward()">➡️</button>
-			</nav>
-		  </header>
+        <!-- Include the header -->
+        <div id="header-placeholder"></div>
 
         <!-- Quiz Results -->
         <div id="quiz-result" class="card">
@@ -66,5 +58,12 @@
             <!-- Answer Button -->
             <button type="button" onclick="showResults();">Check Answers</button>
         </div>
+
+        <!-- Include the footer -->
+        <div id="footer-placeholder"></div>
+
+        <!-- Script to load header and footer -->
+        <script src="imports/loadImports.js"></script>
+
     </body>
 </html>
