--- a/website/TOS.html
+++ b/website/TOS.html
@@ -152,23 +152,8 @@
     </style>
 </head>
 <body>
-
-    <header>
-        <!-- Logo Placeholder -->
-        <div class="logo">
-            <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
-            <img src="path/to/logo.png" alt="Logo">
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="course_content.html">Courses</a>
-            <a href="TOS.html">Terms of Service</a>
-            <a href="privacy.html">Privacy Policy</a>
-            <!-- Placeholder links for future account system -->
-            <a href="#" id="login-button">Login</a>
-            <a href="#" id="register-button">Register</a>
-        </nav>
-    </header>
+    <!-- Include the header -->
+    <div id="header-placeholder"></div>
 
     <div class="container">
         <h1>Terms of Service</h1>
@@ -274,20 +259,10 @@
         </section>
     </div>
 
-    <footer>
-        <a href="TOS.html">Terms of Service</a>
-        <span>|</span>
-        <a href="privacy.html">Privacy Policy</a>
-        <span>|</span>
-        <a href="#" id="login-footer">Login</a>
-        <span>|</span>
-        <a href="#" id="register-footer">Register</a>
-    </footer>
+    <!-- Include the footer -->
+    <div id="footer-placeholder"></div>
 
-    <!-- Placeholder JavaScript for future account system -->
-    <script>
-        // Future implementation for account system
-        // You can add event listeners for Login and Register buttons here
-    </script>
+    <!-- Script to load header and footer -->
+    <script src="imports/loadImports.js"></script>
 </body>
 </html>
