--- a/website/TOS.html
+++ b/website/TOS.html
@@ -263,6 +263,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Script to load header and footer -->
-    <script src="imports/loadImports.js"></script>
+    <script src="imports/loadImports.js" defer></script>
 </body>
 </html>
