--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -63,7 +63,7 @@
         <div id="footer-placeholder"></div>
 
         <!-- Script to load header and footer -->
-        <script src="imports/loadImports.js"></script>
+        <script src="imports/loadImports.js" defer></script>
 
     </body>
 </html>
