header correctly sits at the bottom of the page, create styles.css

--- a/website/TOS.html
+++ b/website/TOS.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Literacy Course - Terms of Service</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
         /* Reset some default styles */
         * {
@@ -260,7 +261,11 @@
     </div>
 
     <!-- Include the footer -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder">
+        <footer>
+            <a href="#">Loading...</a>
+        </footer>
+    </div>
 
     <!-- Script to load header and footer -->
     <script src="imports/loadImports.js" defer></script>
