--- a/website/course_content.html
+++ b/website/course_content.html
@@ -6,7 +6,7 @@
     <title>Digital Literacy Course - Keybinds Lesson</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="./imports/loadImports.js" defer></script>
-    
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
         /* Reset some default styles */
         * {
@@ -280,13 +280,20 @@
         <section id="what-are-some-safety-tips-when-using-keybinds">
             <h2>What are some safety tips when using keybinds?</h2>
             <ul>
-                <li><strong>Avoid repetitive strain:</strong> Take breaks and vary your tasks to prevent strain from repetitive keybind use.</li>
+                <li><strong>Avoid repetitive strain:</strong> Take breaks and vary your tasks to prevent strain from repetitive keybind use.</li> <!-- what -->
                 <li><strong>Be cautious with custom keybinds:</strong> Ensure custom keybinds do not interfere with important system functions.</li>
                 <li><strong>Stay updated:</strong> Keep your software updated to ensure keybinds work correctly and securely.</li>
             </ul>
         </section>
 
         <a href="quiz1.html" class="quiz-button">Take the Quiz</a>
+    </div>
+
+    <!-- Include the footer -->
+    <div id="footer-placeholder">
+        <footer>
+            <a href="#">Loading...</a>
+        </footer>
     </div>
 
     <!-- JavaScript for Interactive Practice -->
@@ -350,5 +357,8 @@
             }
         });
     </script>
+
+    <!-- Script to load header and footer -->
+    <script src="imports/loadImports.js" defer></script>
 </body>
 </html>
