--- a/website/privacy.html
+++ b/website/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Literacy Course - Privacy Policy</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
     <style>
         /* Reset some default styles */
         * {
@@ -73,30 +74,6 @@
             margin-bottom: 15px;
             line-height: 1.6;
         }
-
-        /* Footer Styling */
-        footer {
-            background-color: #ffffff;
-            padding: 20px;
-            text-align: center;
-            border-top: 1px solid #e0e0e0;
-            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        footer a {
-            text-decoration: none;
-            color: #333;
-            margin: 0 10px;
-            font-size: 0.9rem;
-            transition: color 0.3s;
-        }
-
-        footer a:hover {
-            color: #007BFF;
-        }
     </style>
 </head>
 <body>
@@ -121,7 +98,11 @@
     </div>
 
     <!-- Include the footer -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder">
+        <footer>
+            <a href="#">Loading...</a>
+        </footer>
+    </div>
 
     <!-- Script to load header and footer -->
     <script src="imports/loadImports.js"></script>
