--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="styles/quizlib.min.css" media="screen">
         <!-- Dev: <link rel="stylesheet" type="text/css" href="../../src/quizlib.css" media="screen">-->
         <link rel="stylesheet" type="text/css" href="styles/stylesheet.css" media="screen">
+        <link rel="stylesheet" href="styles/styles.css">
         <title>Digital Literacy Course - Quiz</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
@@ -60,10 +61,13 @@
         </div>
 
         <!-- Include the footer -->
-        <div id="footer-placeholder"></div>
+        <div id="footer-placeholder">
+            <footer>
+                <a href="#">Loading...</a>
+            </footer>
+        </div>
 
         <!-- Script to load header and footer -->
         <script src="imports/loadImports.js" defer></script>
-
     </body>
 </html>
